samples/_failures_safe/1761070598_d64c75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3edc13d7.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_3edc13d7.c:125:5: error: expected declaration or statement at end of input
  125 |     return det;
      |     ^~~~~~
